adjust agents pod identity

--- a/src/AgentSetup/orgRunner.yml
+++ b/src/AgentSetup/orgRunner.yml
@@ -3,6 +3,8 @@ kind: Runner
 metadata:
   name: gb3s-runner
   namespace: actions-runner-system
+  labels:
+    aadpodidbinding: gb3s-cluster
 spec:
   organization: gb3s
   env: []
