--- a/src/AgentSetup/orgRunner.yml
+++ b/src/AgentSetup/orgRunner.yml
@@ -7,6 +7,7 @@ spec:
   organization: gb3s
   env: []
   template:
-    metadata:
-      labels:
-        aadpodidbinding: gb3s-cluster
+    spec:
+      metadata:
+        labels:
+          aadpodidbinding: gb3s-cluster
