adjust pod identity

--- a/src/AgentSetup/orgRunner.yml
+++ b/src/AgentSetup/orgRunner.yml
@@ -6,5 +6,5 @@ metadata:
 spec:
   organization: gb3s
   env: []
-  labels:
-    - aadpodidbinding: gb3s-cluster
+  labels: |
+    aadpodidbinding: gb3s-cluster
