--- a/src/AgentSetup/orgRunner.yml
+++ b/src/AgentSetup/orgRunner.yml
@@ -1,10 +1,13 @@
 apiVersion: actions.summerwind.dev/v1alpha1
-kind: Runner
+kind: RunnerDeployment
 metadata:
   name: gb3s-runner
   namespace: actions-runner-system
 spec:
   organization: gb3s
+  replicas: 1
   env: []
-  labels: 
-    aadpodidbinding: gb3s-cluster
+  template:
+    spec:
+      labels: 
+        aadpodidbinding: gb3s-cluster
