--- a/src/AgentSetup/orgRunner.yml
+++ b/src/AgentSetup/orgRunner.yml
@@ -4,10 +4,11 @@ metadata:
   name: gb3s-runner
   namespace: actions-runner-system
 spec:
-  organization: gb3s
   replicas: 1
   env: []
-  template:
+  template:  
     spec:
-      labels: 
-        aadpodidbinding: gb3s-cluster
+      organization: gb3s
+      metadata:
+        labels: 
+          aadpodidbinding: gb3s-cluster
