--- a/.devcontainer/workflows/build.yml
+++ b/.devcontainer/workflows/build.yml
@@ -1,18 +1,7 @@
 name: build_image
-on:
-  push:
-    paths:
-      - "src/funcSetup/**"
+on: [push]
 jobs:
   build:
     runs-on: Default
     steps:
-      - name: ACR build
-        id: acr
-        uses: azure/acr-build@v1
-        with:
-          registry: gb3s-registry
-          repository: private.func
-          image: image
-          folder: src/funcSetup
-          dockerfile: ../../dockerfiles/Dockerfile
+      - uses: actions/checkout@v3
