--- a/src/AgentSetup/values.yml
+++ b/src/AgentSetup/values.yml
@@ -2,6 +2,7 @@ podLabels:
   aadpodidbinding: gb3s-cluster
   
 authSecret:
+  create: true
   github_app_id: "216613"
   github_app_installation_id: "27080785"
   github_app_private_key: |
