--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,4 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
-      - uses: azure/docker-login@v1
-        with:
-          login-server: 'gb3sacr.privatelink.azurecr.io.' # default: index.docker.io
+      - run: az login --identity
