--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: build_image
 on: [push, workflow_dispatch]
 jobs:
   build0:
+    runs-on: ubuntu-latest
     steps:
     - run: echo "wazzzaup"
     
