--- a/src/AgentSetup/apimValues.yml
+++ b/src/AgentSetup/apimValues.yml
@@ -1,3 +1,3 @@
 service:
-  annotations: |
-    "service.beta.kubernetes.io/azure-load-balancer-internal": true
+  annotations: 
+  - "service.beta.kubernetes.io/azure-load-balancer-internal": true
