--- a/src/AgentSetup/apimValues.yml
+++ b/src/AgentSetup/apimValues.yml
@@ -1,4 +1,4 @@
 service:
   annotations: {
-    service.beta.kubernetes.io/azure-load-balancer-internal: true
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
   }
