--- a/src/AgentSetup/apimValues.yml
+++ b/src/AgentSetup/apimValues.yml
@@ -1,5 +1,6 @@
 service:
   type: LoadBalancer
   annotations: {
-    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true",
+    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "external-apim"
   }
