--- a/src/AgentSetup/apimValues.yml
+++ b/src/AgentSetup/apimValues.yml
@@ -2,5 +2,5 @@ service:
   type: LoadBalancer
   annotations: {
     service.beta.kubernetes.io/azure-load-balancer-internal: "true",
-    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "external-apim"
+    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "internal"
   }
