--- a/src/AgentSetup/apimValues.yml
+++ b/src/AgentSetup/apimValues.yml
@@ -4,6 +4,5 @@ service:
     service.beta.kubernetes.io/azure-load-balancer-internal: "true",
     service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "internal"
   }
-k8s:
-  ingress:
-    enabled: true
+ingress:
+  enabled: "true"
