--- a/src/AgentSetup/agentIdentity.yml
+++ b/src/AgentSetup/agentIdentity.yml
@@ -5,8 +5,8 @@ metadata:
   name: gb3s-cluster-msi
 spec:
   type: 0
-  resourceID: /subscriptions/4dc1bd33-fef6-413d-aa31-bc639452a449/resourcegroups/gb3s/providers/Microsoft.ManagedIdentity/userAssignedIdentities/gb3s-cluster
-  clientID: 340af2c4-3165-46d9-9adf-c24fd21f6873
+  resourceID: $GB3S_RESOURCEID
+  clientID: $GB3S_CLIENTID
 ---
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentityBinding
