--- a/src/AgentSetup/action_runner_ingress.yml
+++ b/src/AgentSetup/action_runner_ingress.yml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: azure/application-gateway
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
-  ingressClassName: azure/application-gateway
+  ingressClassName: "azure/application-gateway"
   rules:
     - host: agents.gbabes.org
       http:
