add ingress file

--- a/src/AgentSetup/action_runner_ingress.yml
+++ b/src/AgentSetup/action_runner_ingress.yml
@@ -9,8 +9,7 @@ metadata:
 spec:
   ingressClassName: "azure/application-gateway"
   rules:
-    - host: agents.gbabes.org
-      http:
+    - http:
         paths:
           - path: /actions-runner-controller-github-webhook-server
             pathType: Prefix
