--- a/src/AgentSetup/action_runner_ingress.yml
+++ b/src/AgentSetup/action_runner_ingress.yml
@@ -5,13 +5,13 @@ metadata:
   namespace: actions-runner-system
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    appgw.ingress.kubernetes.io/backend-protocol: "http"
 spec:
   rules:
   - host: agents.gbabes.org
     http:
       paths:
-      - path: /actions-runner-controller-github-webhook-server
+      - path: /
         pathType: Prefix
         backend:
           service:
