--- a/src/AgentSetup/action_runner_agent.yml
+++ b/src/AgentSetup/action_runner_agent.yml
@@ -1,5 +1,5 @@
 apiVersion: actions.summerwind.dev/v1alpha1
-kind: Runner
+kind: RunnerDeployment
 metadata:
   name: CLUSTER_NAME-runner
   namespace: actions-runner-system
@@ -22,7 +22,7 @@ spec:
   minReplicas: 0
   maxReplicas: 3
   scaleTargetRef:
-    name: CLUSTER_NAME-runners
+    name: CLUSTER_NAME-runner
     # Uncomment the below in case the target is not RunnerDeployment but RunnerSet
     #kind: RunnerSet
   scaleUpTriggers:
