--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: build_image
 on: [push, workflow_dispatch]
 jobs:
   build0:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - run: echo "wazzzaup"
     
